--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text" style="color: white;">
-              <strong>Putting data to work and stopping diseases in their tracks.</strong>
+              <strong>Putting data to work to stop diseases from spreading.</strong>
             </h1>
             <hr>
           </div>
